--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+body {
+    font-family: 'Montserrat', sans-serif;
+}
 .input-field{
   @apply p-3 shadow-xl outline-none border-l-4 my-2 rounded-l-md border-secondary focus:border-secondary focus:rounded-none focus:outline-none focus:border-b-2 focus:border-l-0
 }
